PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jan 2007, Version 4.4.5
- Fixed bug #39819 (Using $this not in object context can cause segfaults).
  (Dmitry)

04 Jan 2007, Version 4.4.5RC1
- Added a meta tag to phpinfo() output to prevent search engines from 
  indexing the page. (Ilia)
- Updated PCRE to version 6.7. (Ilia)
- Fixed missing open_basedir check inside chdir() function. (Ilia)
- Fixed bug #39971 (pg_insert/pg_update do not allow now() to be used for   
  timestamp fields). (Ilia)
- Fixed bug #39890 (using autoconf 2.6x and --with-layout=GNU breaks PEAR 
  install path). (Tony)
- Fixed bug #39653 (ext/dba doesn't check for db-4.5 and db-4.4 when db4 
  support is enabled). (Tony)
- Fixed bug #39583 (ftp_put() does not change transfer mode to ASCII). (Tony)
- Fixed bug #39458 (ftp_nlist() returns false on empty dirs). (Nuno)
- Fixed bug #39354 (Allow building of curl extension against libcurl
  7.16.0). (Ilia)
- Fixed bug #39034 (curl_exec() with return transfer returns TRUE on empty
  files). (Ilia)
- Fixed bug #38963 (Fixed a possible open_basedir bypass in tempnam()). (Ilia)
- Fixed bug #38882 (ldap_connect causes segfault with newer versions of 
  OpenLDAP). (Tony)
- Fixed bug #38859 (parse_url() fails if passing '@' in passwd). (Tony,Ilia)
- Fixed bug #38722 (Calling undefined method prints insufficient error message)
  (Hannes)
- Fixed bug #38534 (segfault when calling setlocale() in userspace session
  handler). (Tony)
- Fixed bug #38450 (constructor is not called for classes used in userspace
  stream wrappers). (Tony)
- Fixed bug #38378 (wddx_serialize_value() generates no wellformed xml). 
  (sj at sjaensch dot org, grzegorz dot nosek at netart dot pl, Tony).
- Fixed bug #37812 (aggregate_methods_by_list fails to take certain methods).
  (Hannes)
- Fixed bug #36975 (natcasesort() causes array_pop() to misbehave). (Hannes)